--- a/liga.html
+++ b/liga.html
@@ -99,7 +99,7 @@
                 <p class="numResultado">1</p>
             </div>
             <div class="gameTable">
-                <p class="numResultado">-</p>
+                <p class="numResultado">8</p>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">09:30</b>
@@ -107,7 +107,7 @@
                     <b class="display-6 fs-6">12/05/24</b>
                 </div>
                 <img src="./assets/img/logoTropicales.png" alt="Logo de Tropicales de Madrid">
-                <p class="numResultado">-</p>
+                <p class="numResultado">0</p>
             </div>
         </div>
         <a style="margin: 2rem;" class="btn-azul" target="_blank" href="index.html">VOLVER</a>
