Update in ligahtml

--- a/liga.html
+++ b/liga.html
@@ -51,11 +51,11 @@
                 <p class="numResultado">-</p>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
                 <div class="horarioGame">
-                    <b class="display-6 fs-6">15:50</b>
+                    <b class="display-6 fs-6">16:20</b>
                     <span>VS</span>
                     <b class="display-6 fs-6">26/05/24</b>
                 </div>
-                <img src="./assets/img/logoGoodies.png" alt="Logo de Goodies de Madrid">
+                <img src="./assets/img/logoMurallas.png" alt="Logo de Goodies de Madrid">
                 <p class="numResultado">-</p>
             </div>
             <div class="gameTable roundRobin">
