Update Liga y css

--- a/liga.html
+++ b/liga.html
@@ -26,7 +26,7 @@
         <h2 class="text-center">ROUND ROBIN</h2>
         <div class="containerGames">
             <div class="gameTable roundRobin">
-                <p class="numResultado">-</p>
+                <p class="numResultado">5</p>
                 <img src="./assets/img/logoEspartanas.png" alt="Logo de Espartanas Kickingball">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">9:00</b>
@@ -34,18 +34,18 @@
                     <b class="display-6 fs-6">19/05/24</b>
                 </div>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
-                <p class="numResultado">-</p>
+                <p class="numResultado">0</p>
             </div>
             <div class="gameTable roundRobin">
-                <p class="numResultado">-</p>
+                <p class="numResultado">8</p>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">10:50</b>
                     <span>VS</span>
                     <b class="display-6 fs-6">19/05/24</b>
                 </div>
-                <img src="./assets/img/logoPanas.png" alt="Logo de las Panas de Venezuela">
-                <p class="numResultado">-</p>
+                <img src="./assets/img/logoMurallas.png" alt="Logo de las Panas de Venezuela">
+                <p class="numResultado">0</p>
             </div>
             <div class="gameTable roundRobin">
                 <p class="numResultado">-</p>
@@ -55,7 +55,7 @@
                     <span>VS</span>
                     <b class="display-6 fs-6">26/05/24</b>
                 </div>
-                <img src="./assets/img/logoMurallas.png" alt="Logo de Goodies de Madrid">
+                <img src="./assets/img/logoPanas.png" alt="Logo de Goodies de Madrid">
                 <p class="numResultado">-</p>
             </div>
             <div class="gameTable roundRobin">
