--- a/liga.html
+++ b/liga.html
@@ -48,7 +48,7 @@
                 <p class="numResultado">0</p>
             </div>
             <div class="gameTable roundRobin">
-                <p class="numResultado">-</p>
+                <p class="numResultado">6</p>
                 <img src="./assets/img/logoVikingas.png" alt="Logo de Vikingas de Madrid">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">12:40</b>
@@ -56,10 +56,10 @@
                     <b class="display-6 fs-6">26/05/24</b>
                 </div>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
-                <p class="numResultado">-</p>
+                <p class="numResultado">3</p>
             </div>
             <div class="gameTable roundRobin">
-                <p class="numResultado">-</p>
+                <p class="numResultado">16</p>
                 <img src="./assets/img/logoPanteras.png" alt="Logo de Panteras de Madrid">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">14:30</b>
@@ -67,7 +67,7 @@
                     <b class="display-6 fs-6">26/05/24</b>
                 </div>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
-                <p class="numResultado">-</p>
+                <p class="numResultado">1</p>
             </div>
             <div class="gameTable roundRobin">
                 <p class="numResultado">-</p>
