--- a/liga.html
+++ b/liga.html
@@ -70,7 +70,7 @@
                 <p class="numResultado">1</p>
             </div>
             <div class="gameTable roundRobin">
-                <p class="numResultado">-</p>
+                <p class="numResultado">12</p>
                 <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
                 <div class="horarioGame">
                     <b class="display-6 fs-6">16:20</b>
@@ -78,7 +78,7 @@
                     <b class="display-6 fs-6">02/06/24</b>
                 </div>
                 <img src="./assets/img/logoPanas.png" alt="Logo de Goodies de Madrid">
-                <p class="numResultado">-</p>
+                <p class="numResultado">2</p>
             </div>
         </div>
         <br>
