--- a/index.html
+++ b/index.html
@@ -66,6 +66,18 @@
                 <a href="https://www.instagram.com/sweetgil_madrid/" target="_blank"><img src="./assets/img/sweetgil.png" alt="Logo de Tartas Sweet Gil" width="120"></a>
             </div>
         </div>
+        <h3 class="titleTercer">3º LUGAR</h3>
+        <div class="gameTable" id="tercerLugar">
+            <img id="cargandoIcon" src="./assets/img/cargandoIcon.webp" alt="cargando">
+            <img src="./assets/img/logoEspartanas.png" alt="Logo de Vikingas de Madrid">
+            <div class="horarioGame">
+                <b class="display-6 fs-6">10:00</b>
+                <span>VS</span>
+                <b class="display-6 fs-6">16/06/24</b>
+            </div>
+            <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
+            <img id="cargandoIcon" src="./assets/img/cargandoIcon.webp" alt="cargando">
+        </div>
         <div class="verLiga container">
             <img decoding="async" loading="eager" src="assets/img/logo_liga.png" width="100" alt="Logo de la Liga de Kickingball en Madrid">
             <h2 class="title-liga">LIGA DE KICKINGBALL MADRID 2024</h2>
