--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <h3 class="titleTercer">3º LUGAR</h3>
         <div class="gameTable" id="tercerLugar">
-            <img id="cargandoIcon" src="./assets/img/cargandoIcon.webp" alt="cargando">
+            <p class="numResultado">7</p>
             <img src="./assets/img/logoEspartanas.png" alt="Logo de Vikingas de Madrid">
             <div class="horarioGame">
                 <b class="display-6 fs-6">10:00</b>
@@ -76,7 +76,7 @@
                 <b class="display-6 fs-6">16/06/24</b>
             </div>
             <img src="./assets/img/logo_gladiadoras.png" alt="Logo de Gladiadoras de Madrid">
-            <img id="cargandoIcon" src="./assets/img/cargandoIcon.webp" alt="cargando">
+            <p class="numResultado">1</p>
         </div>
         <div class="verLiga container">
             <img decoding="async" loading="eager" src="assets/img/logo_liga.png" width="100" alt="Logo de la Liga de Kickingball en Madrid">
